{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 31,
  "lineage": "76d79e0f-959a-07c5-5885-37352e8e968d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08eebff62e61110b7",
            "arn": "arn:aws:ec2:eu-west-3:295196550967:instance/i-021b0c3f9aa32d5df",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021b0c3f9aa32d5df",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02460d425a4823c46",
            "private_dns": "ip-192-168-0-13.eu-west-3.compute.internal",
            "private_ip": "192.168.0.13",
            "public_dns": "ec2-52-47-184-102.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.184.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02fa1837954c622e4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0307d1cd5048f1c64",
            "tags": {
              "Name": "DB server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b5c8f3acc780de70"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.assignment_sg_22"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "LB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08eebff62e61110b7",
            "arn": "arn:aws:ec2:eu-west-3:295196550967:instance/i-0429a98d15f6ba493",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0429a98d15f6ba493",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08568ea8bfee314cb",
            "private_dns": "ip-192-168-0-11.eu-west-3.compute.internal",
            "private_ip": "192.168.0.11",
            "public_dns": "ec2-52-47-153-53.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.153.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03ea9f6c157924ec6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0307d1cd5048f1c64",
            "tags": {
              "Name": "LB server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a14275bcb102acd5",
              "sg-0b5c8f3acc780de70"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.assignment_sg_22",
            "aws_security_group.assignment_sg_80"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WEB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08eebff62e61110b7",
            "arn": "arn:aws:ec2:eu-west-3:295196550967:instance/i-0947b69caa4e0f958",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0947b69caa4e0f958",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a2b229a3fa8190f3",
            "private_dns": "ip-192-168-0-12.eu-west-3.compute.internal",
            "private_ip": "192.168.0.12",
            "public_dns": "ec2-15-188-82-58.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.82.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00620a38d4dd1cdaf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0307d1cd5048f1c64",
            "tags": {
              "Name": "WEB server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b5c8f3acc780de70"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.assignment_sg_22"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "assignment_sg_22",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:295196550967:security-group/sg-0b5c8f3acc780de70",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b5c8f3acc780de70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "13.49.78.55/32"
                ],
                "description": "port 22 ssh connection",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "internal traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "assignment_sg_22",
            "name_prefix": null,
            "owner_id": "295196550967",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-02fb7f12a3c909001"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "assignment_sg_80",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:295196550967:security-group/sg-0a14275bcb102acd5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a14275bcb102acd5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "inbound port 80 LP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "assignment_sg_80",
            "name_prefix": null,
            "owner_id": "295196550967",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-02fb7f12a3c909001"
          }
        }
      ]
    }
  ]
}